헤더/푸터 완성 푸터 반응형 수정중

--- a/css/style.css
+++ b/css/style.css
@@ -25,24 +25,25 @@ fieldset {
   clear: both; }
 
 #header_sub {
-  width: 100%;
-  border-bottom: 1px solid #ddd; }
+  width: 100vw;
+  background: #fff;
+  overflow: hidden; }
   #header_sub .inner {
     width: 1180px;
-    height: 120px;
+    height: 100px;
     margin: 0 auto;
     position: relative; }
     #header_sub .inner > h1 {
       position: absolute;
-      left: 0;
-      bottom: 15px; }
+      left: 0%;
+      bottom: 25%; }
       #header_sub .inner > h1 a {
-        font: bold 24px/1 "arial";
-        color: #444; }
+        font: bold 25px/1 "Spartan";
+        color: #111; }
     #header_sub .inner .menuWeb #gnb {
       position: absolute;
-      bottom: 0;
-      right: 0; }
+      bottom: 25%;
+      right: 20%; }
       #header_sub .inner .menuWeb #gnb::after {
         content: "";
         display: block;
@@ -51,17 +52,28 @@ fieldset {
         float: left; }
         #header_sub .inner .menuWeb #gnb li a {
           display: block;
-          padding: 20px 40px;
-          color: #555;
-          font: bold 15px/1 "arial";
-          transition: 0.5s; }
+          padding: 10px 20px;
+          font: 400 13px/1 "Spartan";
+          color: #111;
+          transition: 0.5s;
+          box-sizing: border-box;
+          border-top: 1px solid transparent; }
+          #header_sub .inner .menuWeb #gnb li a:nth-of-type(1)::after {
+            content: "";
+            display: inline-block;
+            position: Absolute;
+            left: 15%;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 1px;
+            height: 100%;
+            background: #e0e0e0; }
         #header_sub .inner .menuWeb #gnb li:hover a {
-          background: #555;
-          color: #fff; }
+          color: #d8778f; }
     #header_sub .inner .menuWeb .util {
       position: absolute;
-      top: 20px;
-      right: 0px; }
+      bottom: 20%;
+      right: 5%; }
       #header_sub .inner .menuWeb .util::after {
         content: "";
         display: block;
@@ -69,18 +81,28 @@ fieldset {
       #header_sub .inner .menuWeb .util li {
         float: left; }
         #header_sub .inner .menuWeb .util li a {
-          display: block;
-          font: 12px/1 "arial";
-          color: #999;
-          padding: 0 10px;
-          border-right: 1px solid #aaa; }
+          width: 100%;
+          display: inline-block;
+          font-size: 30px;
+          color: #111;
+          margin-left: 20px;
+          padding: 10px 10px;
+          transition: 0.5s;
+          text-align: center; }
         #header_sub .inner .menuWeb .util li:last-child a {
+          width: 30%;
+          position: absolute;
+          top: 55%;
+          transform: translateY(-50%);
+          font-size: 13px;
+          font-weight: 400;
+          font-family: "Spartan";
+          line-height: 15px;
           border-right: none; }
     #header_sub .inner .btnCall {
       position: absolute;
-      top: 50%;
-      right: 30px;
-      transform: translateY(-50%);
+      top: 20%;
+      right: 0;
       width: 20px;
       height: 20px;
       display: none; }
@@ -94,7 +116,7 @@ fieldset {
         top: 0;
         left: 0;
         transform: rotate(0deg);
-        transition: top 0.5s 0s, transform 0.5s 0.5s; }
+        transition: top 0.5s 0s transform 0.5s 0.5s; }
       #header_sub .inner .btnCall::after {
         content: "";
         display: block;
@@ -105,7 +127,7 @@ fieldset {
         bottom: 0;
         left: 0;
         transform: rotate(0deg);
-        transition: bottom 0.5s 0s, transform 0.5s 0.5s; }
+        transition: bottom 0.5s 0s transform 0.5s 0.5s; }
       #header_sub .inner .btnCall span {
         display: block;
         width: 100%;
@@ -134,30 +156,32 @@ fieldset {
       left: -270px;
       width: 270px;
       height: 100vh;
-      background: #333;
+      background: #fcdde0;
       transition: 0.5s;
       padding: 35px 30px;
       box-sizing: border-box;
       z-index: 10; }
       #header_sub .inner .menuMo h1 {
-        border-bottom: 1px solid #666;
-        padding-bottom: 30px; }
+        border-bottom: 1px solid #333;
+        padding-bottom: 10px; }
         #header_sub .inner .menuMo h1 a {
           display: block;
-          font: bold 24px/1 "arial";
-          color: #fff;
+          font: bold 24px/1 "Spartan";
+          color: #222;
           text-align: center; }
         #header_sub .inner .menuMo h1 span {
           font-size: 12px;
-          color: #aaa; }
+          color: #333; }
       #header_sub .inner .menuMo #gnbMo li a {
         display: block;
         width: 100%;
         padding: 20px 0;
-        border-bottom: 1px solid #444;
-        font: bold 14px/1 "arial";
-        color: #888;
-        text-align: center; }
+        font: bold 14px/1 "Spartan";
+        color: #333;
+        text-align: center;
+        transition: 0.5s; }
+      #header_sub .inner .menuMo #gnbMo li:hover a {
+        color: #fff; }
       #header_sub .inner .menuMo.on {
         left: 0; }
 
@@ -186,51 +210,150 @@ fieldset {
           margin-left: 10px; }
 
 #footer_sub {
-  width: 100%;
-  padding: 100px 0;
-  background: #444; }
+  width: 100vw;
+  padding-top: 50px;
+  background: #efefef;
+  overflow: hidden;
+  position: relative; }
   #footer_sub .inner {
-    width: 1180px;
-    margin: 0 auto; }
-    #footer_sub .inner::after {
-      content: "";
-      display: block;
-      clear: both; }
-    #footer_sub .inner h1 {
-      font: bold 24px/1 "arial";
-      color: #666;
-      float: left; }
-    #footer_sub .inner ul {
-      float: right; }
-      #footer_sub .inner ul li {
+    width: 1330px;
+    margin: 50px auto;
+    position: relative; }
+    #footer_sub .inner .wrap {
+      width: 100%; }
+      #footer_sub .inner .wrap::after {
+        content: "";
+        display: block;
+        clear: both; }
+      #footer_sub .inner .wrap article {
+        width: 20%;
+        height: 200px;
+        padding: 10px 20px;
+        margin-right: 20px;
         float: left;
-        margin-left: 20px; }
-        #footer_sub .inner ul li a {
-          font: bold 14px/1 "arial";
-          color: #666; }
-    #footer_sub .inner address {
-      width: 100%;
-      float: left;
-      font: 14px/1.3 "arial";
-      color: #777;
-      margin-bottom: 20px;
-      margin-top: 20px; }
-    #footer_sub .inner p {
-      font: 12px/1 "arial";
-      color: #777;
-      width: 100%;
-      float: left; }
+        position: relative; }
+        #footer_sub .inner .wrap article:nth-of-type(3) {
+          width: 10%; }
+        #footer_sub .inner .wrap article:nth-of-type(4) {
+          margin-right: 0px;
+          width: 31%; }
+        #footer_sub .inner .wrap article:nth-of-type(1) span {
+          display: block;
+          margin-bottom: 20px;
+          font: normal 19px/1 "arial"; }
+        #footer_sub .inner .wrap article:nth-of-type(3) span a {
+          display: block;
+          margin-bottom: 20px;
+          font: bold 13px/1 "arial";
+          color: #222; }
+        #footer_sub .inner .wrap article .menu {
+          font: 400 14px/1 "arial";
+          color: #333;
+          padding-bottom: 15px;
+          margin-bottom: 20px;
+          border-bottom: 1px solid #aaa;
+          display: inline-block; }
+        #footer_sub .inner .wrap article p {
+          font: 300 13px/1.5 "arial";
+          color: #3c3c3b;
+          margin-bottom: 20px; }
+          #footer_sub .inner .wrap article p:last-child {
+            margin-top: 30px;
+            font-size: 12px;
+            color: #222; }
+          #footer_sub .inner .wrap article p a {
+            font: 400 15px/1.1 "arial";
+            color: #222; }
+      #footer_sub .inner .wrap .box4 p:nth-of-type(2) {
+        font: 12px/1.5 "arial"; }
+      #footer_sub .inner .wrap .box4 > a {
+        display: inline-block;
+        text-align: center;
+        padding: 5px 20px;
+        height: 35px;
+        border: 1px solid #888;
+        font-size: 13px;
+        line-height: 35px;
+        color: #333;
+        margin-right: 15px; }
+        #footer_sub .inner .wrap .box4 > a img {
+          max-width: 100%;
+          height: auto; }
+  #footer_sub .list {
+    width: 100%;
+    background: #bdbdbd;
+    padding: 20px 50px;
+    position: relative; }
+    #footer_sub .list > .wrap {
+      width: 1330px; }
+      #footer_sub .list > .wrap .company {
+        width: 70%; }
+      #footer_sub .list > .wrap .sns {
+        position: absolute;
+        top: 50%;
+        right: 10vw;
+        transform: translateY(-50%); }
+        #footer_sub .list > .wrap .sns a {
+          display: inline-block;
+          content: "";
+          font-size: 20px;
+          color: #fff;
+          margin-right: 20px; }
 
 @media screen and (max-width: 1179px) {
-  #header .inner {
-    width: 100%;
-    height: 100px; }
-    #header .inner > h1 {
+  #header_sub .inner {
+    width: 100vw; }
+    #header_sub .inner > h1 {
       left: 20px; }
-    #header .inner .menuWeb {
-      display: none; }
-    #header .inner .btnCall {
+    #header_sub .inner .menuWeb {
       display: block; }
+      #header_sub .inner .menuWeb #gnb {
+        display: none; }
+      #header_sub .inner .menuWeb .util {
+        position: absolute;
+        bottom: 25%;
+        right: 25%;
+        display: block; }
+        #header_sub .inner .menuWeb .util li a {
+          font-size: 25px;
+          margin-left: 30px; }
+    #header_sub .inner .btnCall {
+      top: 50%;
+      right: 5vw;
+      display: block;
+      transform: translateY(-50%); }
+    #header_sub .inner .menuMo {
+      position: fixed;
+      top: 0;
+      left: -270px;
+      width: 270px;
+      height: 100vh;
+      background: #fcdde0;
+      transition: 0.5s;
+      padding: 35px 30px;
+      box-sizing: border-box;
+      z-index: 10; }
+      #header_sub .inner .menuMo h1 {
+        border-bottom: 1px solid #333;
+        padding-bottom: 10px; }
+        #header_sub .inner .menuMo h1 a {
+          display: block;
+          color: #222;
+          text-align: center; }
+        #header_sub .inner .menuMo h1 span {
+          font-size: 12px;
+          color: #333; }
+      #header_sub .inner .menuMo #gnbMo li a {
+        display: block;
+        width: 100%;
+        padding: 20px 0;
+        color: #333;
+        text-align: center;
+        transition: 0.5s; }
+      #header_sub .inner .menuMo #gnbMo li:hover a {
+        color: #fff; }
+      #header_sub .inner .menuMo.on {
+        left: 0; }
 
   .content {
     padding: 0px 0px 100px; }
@@ -247,6 +370,11 @@ fieldset {
     #footer_sub .inner {
       width: 100%; } }
 @media screen and (max-width: 539px) {
+  #header_sub .inner .menuWeb {
+    display: none; }
+  #header_sub .inner .btnCall {
+    right: 10vw; }
+
   .content {
     padding: 0px 0px 80px; }
     .content .sub_visual {
@@ -837,8 +965,9 @@ fieldset {
     height: auto; }
 
 #header {
-  width: 100%;
-  background: #fff; }
+  width: 100vw;
+  background: #fff;
+  overflow: hidden; }
   #header .inner {
     width: 1180px;
     height: 100px;
@@ -854,7 +983,7 @@ fieldset {
     #header .inner .menuWeb #gnb {
       position: absolute;
       bottom: 25%;
-      right: 9vw; }
+      right: 20%; }
       #header .inner .menuWeb #gnb::after {
         content: "";
         display: block;
@@ -884,7 +1013,7 @@ fieldset {
     #header .inner .menuWeb .util {
       position: absolute;
       bottom: 20%;
-      right: -5%; }
+      right: 5%; }
       #header .inner .menuWeb .util::after {
         content: "";
         display: block;
@@ -977,7 +1106,7 @@ fieldset {
         padding-bottom: 10px; }
         #header .inner .menuMo h1 a {
           display: block;
-          font: bold 24px/1 "STIX Two Text";
+          font: bold 24px/1 "Spartan";
           color: #222;
           text-align: center; }
         #header .inner .menuMo h1 span {
@@ -987,7 +1116,7 @@ fieldset {
         display: block;
         width: 100%;
         padding: 20px 0;
-        font: bold 14px/1 "STIX Two Text";
+        font: bold 14px/1 "Spartan";
         color: #333;
         text-align: center;
         transition: 0.5s; }
@@ -1305,13 +1434,14 @@ fieldset {
             color: #fff; }
 
 #footer {
-  width: 100%;
-  padding: 100px 0;
+  width: 100vw;
+  padding-top: 50px;
   background: #efefef;
+  overflow: hidden;
   position: relative; }
   #footer .inner {
     width: 1330px;
-    margin: 0 auto;
+    margin: 50px auto;
     position: relative; }
     #footer .inner .wrap {
       width: 100%; }
@@ -1345,7 +1475,8 @@ fieldset {
           color: #333;
           padding-bottom: 15px;
           margin-bottom: 20px;
-          border-bottom: 1px solid #aaa; }
+          border-bottom: 1px solid #aaa;
+          display: inline-block; }
         #footer .inner .wrap article p {
           font: 300 13px/1.5 "arial";
           color: #3c3c3b;
@@ -1375,43 +1506,78 @@ fieldset {
   #footer .list {
     width: 100%;
     background: #bdbdbd;
-    padding: 17px 0;
+    padding: 20px 50px;
     position: relative; }
     #footer .list > .wrap {
-      width: 1330px;
-      position: absolute;
-      left: 0;
-      bottom: 0; }
+      width: 1330px; }
       #footer .list > .wrap .company {
-        padding: 17px; }
+        width: 70%; }
       #footer .list > .wrap .sns {
-        position: absolute; }
+        position: absolute;
+        top: 50%;
+        right: 10vw;
+        transform: translateY(-50%); }
+        #footer .list > .wrap .sns a {
+          display: inline-block;
+          content: "";
+          font-size: 20px;
+          color: #fff;
+          margin-right: 20px; }
 
 @media screen and (max-width: 1179px) {
   #header .inner {
-    width: 100%; }
+    width: 100vw; }
     #header .inner > h1 {
-      left: 3%; }
-    #header .inner .menuWeb .util {
-      position: absolute;
-      top: 14vh;
-      right: 0vw;
-      z-index: 2; }
-      #header .inner .menuWeb .util li {
-        margin-bottom: 30px; }
+      left: 20px; }
+    #header .inner .menuWeb {
+      display: block; }
+      #header .inner .menuWeb #gnb {
+        display: none; }
+      #header .inner .menuWeb .util {
+        position: absolute;
+        bottom: 25%;
+        right: 25%;
+        display: block; }
         #header .inner .menuWeb .util li a {
-          display: block;
-          font: bold 13px/1 "STIX Two Text";
-          color: #111;
-          padding: 0 10px;
-          transition: 0.5s;
-          text-align: center; }
-        #header .inner .menuWeb .util li:hover a {
-          color: #fff; }
-        #header .inner .menuWeb .util li:last-child a {
-          border-right: none; }
+          font-size: 25px;
+          margin-left: 30px; }
     #header .inner .btnCall {
-      right: 15vmin; }
+      top: 50%;
+      right: 5vw;
+      display: block;
+      transform: translateY(-50%); }
+    #header .inner .menuMo {
+      position: fixed;
+      top: 0;
+      left: -270px;
+      width: 270px;
+      height: 100vh;
+      background: #fcdde0;
+      transition: 0.5s;
+      padding: 35px 30px;
+      box-sizing: border-box;
+      z-index: 10; }
+      #header .inner .menuMo h1 {
+        border-bottom: 1px solid #333;
+        padding-bottom: 10px; }
+        #header .inner .menuMo h1 a {
+          display: block;
+          color: #222;
+          text-align: center; }
+        #header .inner .menuMo h1 span {
+          font-size: 12px;
+          color: #333; }
+      #header .inner .menuMo #gnbMo li a {
+        display: block;
+        width: 100%;
+        padding: 20px 0;
+        color: #333;
+        text-align: center;
+        transition: 0.5s; }
+      #header .inner .menuMo #gnbMo li:hover a {
+        color: #fff; }
+      #header .inner .menuMo.on {
+        left: 0; }
 
   #visual {
     height: calc(100vh - 120px); }
@@ -1481,14 +1647,100 @@ fieldset {
       width: 100%; }
 
   #footer {
-    padding: 80px 30px; }
+    width: 100vw;
+    padding-top: 50px;
+    background: #efefef;
+    overflow: hidden;
+    position: relative; }
     #footer .inner {
-      width: 100%; } }
+      width: 1330px;
+      margin: 50px auto;
+      position: relative; }
+      #footer .inner .wrap {
+        width: 100%; }
+        #footer .inner .wrap::after {
+          content: "";
+          display: block;
+          clear: both; }
+        #footer .inner .wrap article {
+          width: 20%;
+          height: 200px;
+          padding: 10px 20px;
+          margin-right: 20px;
+          float: left;
+          position: relative; }
+          #footer .inner .wrap article:nth-of-type(3) {
+            width: 10%; }
+          #footer .inner .wrap article:nth-of-type(4) {
+            margin-right: 0px;
+            width: 31%; }
+          #footer .inner .wrap article:nth-of-type(1) span {
+            display: block;
+            margin-bottom: 20px;
+            font: normal 19px/1 "arial"; }
+          #footer .inner .wrap article:nth-of-type(3) span a {
+            display: block;
+            margin-bottom: 20px;
+            font: bold 13px/1 "arial";
+            color: #222; }
+          #footer .inner .wrap article .menu {
+            font: 400 14px/1 "arial";
+            color: #333;
+            padding-bottom: 15px;
+            margin-bottom: 20px;
+            border-bottom: 1px solid #aaa;
+            display: inline-block; }
+          #footer .inner .wrap article p {
+            font: 300 13px/1.5 "arial";
+            color: #3c3c3b;
+            margin-bottom: 20px; }
+            #footer .inner .wrap article p:last-child {
+              margin-top: 30px;
+              font-size: 12px;
+              color: #222; }
+            #footer .inner .wrap article p a {
+              font: 400 15px/1.1 "arial";
+              color: #222; }
+        #footer .inner .wrap .box4 p:nth-of-type(2) {
+          font: 12px/1.5 "arial"; }
+        #footer .inner .wrap .box4 > a {
+          display: inline-block;
+          text-align: center;
+          padding: 5px 20px;
+          height: 35px;
+          border: 1px solid #888;
+          font-size: 13px;
+          line-height: 35px;
+          color: #333;
+          margin-right: 15px; }
+          #footer .inner .wrap .box4 > a img {
+            max-width: 100%;
+            height: auto; }
+    #footer .list {
+      width: 100%;
+      background: #bdbdbd;
+      padding: 20px 50px;
+      position: relative; }
+      #footer .list > .wrap {
+        width: 1330px; }
+        #footer .list > .wrap .company {
+          width: 70%; }
+        #footer .list > .wrap .sns {
+          position: absolute;
+          top: 50%;
+          right: 10vw;
+          transform: translateY(-50%); }
+          #footer .list > .wrap .sns a {
+            display: inline-block;
+            content: "";
+            font-size: 20px;
+            color: #fff;
+            margin-right: 20px; } }
 @media screen and (max-width: 539px) {
-  #header .inner {
-    width: 100%; }
-    #header .inner .menuWeb .util {
-      display: block; }
+  #header .inner .menuWeb {
+    display: none; }
+  #header .inner .btnCall {
+    right: 10vw; }
 
   #visual {
     height: calc(100vh - 120px); }
