--- a/scss/style.scss
+++ b/scss/style.scss
@@ -987,26 +987,21 @@ $mobile: 539px;
 	
 			.wrap {
 				width: 100%;
+				padding: 0 30px;
+				
 	
-				&::after {
-					content: "";
-					display: block;
-					clear: both;
-				}
+				
 				article {
-					width: 20%;
-					height: 200px;
-					padding: 10px 20px;
-					margin-right: 20px;
-					float: left;
-					position: relative;
-	
+					width: 18%;
+					margin: 0;
+				
+					
 					&:nth-of-type(3) {
-						width: 10%;
+						display: none;
+						
 					}
 					&:nth-of-type(4) {
-						margin-right: 0px;
-						width: 31%;
+						display: inline-block;
 					}
 	
 					&:nth-of-type(1) span {
@@ -1044,29 +1039,6 @@ $mobile: 539px;
 						}
 					}
 				}
-				.box4 {
-					p {
-						&:nth-of-type(2) {
-							font: 12px/1.5 "arial";
-						}
-					}
-					> a {
-						display: inline-block;
-						text-align: center;
-						padding: 5px 20px;
-						height: 35px;
-						border: 1px solid #888;
-						font-size: 13px;
-						line-height: 35px;
-						color: #333;
-						margin-right: 15px;
-	
-						img {
-							max-width: 100%;
-							height: auto;
-						}
-					}
-				}
 			}
 		}
 		.list {
@@ -1076,7 +1048,7 @@ $mobile: 539px;
 			position: relative;
 	
 			> .wrap {
-				width: 1330px;
+				width: 100%;
 	
 				.company {
 					width: 70%;
